force-app/main/default/objects/Application__c/fields/AC__c.field-meta.xml
<CustomField>
    <fullName>AC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AC</label>
    <type>Checkbox</type>
</CustomField>