force-app/main/default/objects/Application__c/fields/AC_Remarks__c.field-meta.xml
<CustomField>
    <fullName>AC_Remarks__c</fullName>
    <label>Remarks</label>
    <type>TextArea</type>
</CustomField>