force-app/main/default/objects/Application__c/fields/AC_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>AC_Submission_Date__c</fullName>
    <label>AC Submission Date</label>
    <type>Date</type>
</CustomField>