force-app/main/default/objects/Application__c/fields/AC_User__c.field-meta.xml
<CustomField>
    <fullName>AC_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AC User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Applications2</relationshipName>
    <type>Lookup</type>
</CustomField>