force-app/main/default/objects/Application__c/fields/Agreement_Execution_Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Execution_Rejection_Reason__c</fullName>
    <label>Agreement Execution Rejection Reason</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>