force-app/main/default/objects/Application__c/fields/Agreement_Execution_Status__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Execution_Status__c</fullName>
    <label>Agreement Execution Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>