force-app/main/default/objects/Application__c/fields/All_Reciept_Count__c.field-meta.xml
<CustomField>
    <fullName>All_Reciept_Count__c</fullName>
    <label>All Reciept Count</label>
    <summaryForeignKey>Receipt__c.Application__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>