force-app/main/default/objects/Application__c/fields/Alternate_Channel_Mode__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Channel_Mode__c</fullName>
    <label>Alternate Channel Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Top-up Loan</fullName>
            </value>
            <value>
                <fullName>Brokers</fullName>
            </value>
            <value>
                <fullName>Customer Refferal</fullName>
            </value>
            <value>
                <fullName>Flute Board</fullName>
            </value>
            <value>
                <fullName>Light Board</fullName>
            </value>
            <value>
                <fullName>Old Customer</fullName>
            </value>
            <value>
                <fullName>Other Refferal</fullName>
            </value>
            <value>
                <fullName>Repeat Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>