force-app/main/default/objects/Application__c/fields/Amount_Recommended__c.field-meta.xml
<CustomField>
    <fullName>Amount_Recommended__c</fullName>
    <label>Amount Recommended(₹)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>