force-app/main/default/objects/Application__c/fields/Approved_Reciept_Count__c.field-meta.xml
<CustomField>
    <fullName>Approved_Reciept_Count__c</fullName>
    <label>Approved Reciept Count</label>
    <summaryFilterItems>
        <field>Receipt__c.Approval_Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </summaryFilterItems>
    <summaryForeignKey>Receipt__c.Application__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>