force-app/main/default/objects/Application__c/fields/Approximate_property_cost__c.field-meta.xml
<CustomField>
    <fullName>Approximate_property_cost__c</fullName>
    <label>Approximate Property Cost</label>
    <length>255</length>
    <type>Text</type>
</CustomField>