force-app/main/default/objects/Application__c/fields/Balance_Transfer__c.field-meta.xml
<CustomField>
    <fullName>Balance_Transfer__c</fullName>
    <label>Balance Transfer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Institution</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>