force-app/main/default/objects/Application__c/fields/Balance_Transfer_Amount__c.field-meta.xml
<CustomField>
    <fullName>Balance_Transfer_Amount__c</fullName>
    <label>Balance Transfer Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>