force-app/main/default/objects/Application__c/fields/BM_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>BM_Confirmation__c</fullName>
    <label>BM Confirmation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>