force-app/main/default/objects/Application__c/fields/BM_Recommended_Amount__c.field-meta.xml
<CustomField>
    <fullName>BM_Recommended_Amount__c</fullName>
    <label>BM Recommended Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>