force-app/main/default/objects/Application__c/fields/Borrower_Risk_Rating__c.field-meta.xml
<CustomField>
    <fullName>Borrower_Risk_Rating__c</fullName>
    <label>Borrower&apos;s Risk Rating</label>
    <length>50</length>
    <type>Text</type>
</CustomField>