force-app/main/default/objects/Application__c/fields/Broker_Code__c.field-meta.xml
<CustomField>
    <fullName>Broker_Code__c</fullName>
    <label>Broker Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>