force-app/main/default/objects/Application__c/fields/Broker_Name__c.field-meta.xml
<CustomField>
    <fullName>Broker_Name__c</fullName>
    <label>Broker Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>