force-app/main/default/objects/Application__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alternate_Channel</fullName>
                <label>Alternate Channel</label>
            </value>
            <value>
                <fullName>Common</fullName>
            </value>
            <value>
                <fullName>Migration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>