force-app/main/default/objects/Application__c/fields/Collateral_Address__c.field-meta.xml
<CustomField>
    <fullName>Collateral_Address__c</fullName>
    <label>Collateral Address</label>
    <type>TextArea</type>
</CustomField>