force-app/main/default/objects/Application__c/fields/Collateral_ID__c.field-meta.xml
<CustomField>
    <fullName>Collateral_ID__c</fullName>
    <label>Collateral ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>