force-app/main/default/objects/Application__c/fields/Combined_DBR__c.field-meta.xml
<CustomField>
    <fullName>Combined_DBR__c</fullName>
    <label>Combined DBR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>