force-app/main/default/objects/Application__c/fields/Combined_LTV__c.field-meta.xml
<CustomField>
    <fullName>Combined_LTV__c</fullName>
    <label>Combined LTV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>