force-app/main/default/objects/Application__c/fields/Comment_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Comment_Remarks__c</fullName>
    <label>Comment/Remarks</label>
    <type>TextArea</type>
</CustomField>