force-app/main/default/objects/Application__c/fields/Constitution__c.field-meta.xml
<CustomField>
    <fullName>Constitution__c</fullName>
    <label>Constitution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Non-Individual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>