force-app/main/default/objects/Application__c/fields/Current_Deviation_Approval__c.field-meta.xml
<CustomField>
    <fullName>Current_Deviation_Approval__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Deviation Approval</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Current_Deviation_Approval</relationshipName>
    <type>Lookup</type>
</CustomField>