force-app/main/default/objects/Application__c/fields/Customer_Agree__c.field-meta.xml
<CustomField>
    <fullName>Customer_Agree__c</fullName>
    <label>Customer Agree</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Agree with Loan Amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>