force-app/main/default/objects/Application__c/fields/Customer_Communicated__c.field-meta.xml
<CustomField>
    <fullName>Customer_Communicated__c</fullName>
    <label>Customer Communicated Rate(%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>