force-app/main/default/objects/Application__c/fields/Customer_Segment__c.field-meta.xml
<CustomField>
    <fullName>Customer_Segment__c</fullName>
    <label>Customer Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Eateries</fullName>
            </value>
            <value>
                <fullName>Food business</fullName>
            </value>
            <value>
                <fullName>Transport business</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Vegetables/Fruits/Flower/Vendor</fullName>
            </value>
            <value>
                <fullName>Milk business</fullName>
            </value>
            <value>
                <fullName>General shops</fullName>
            </value>
            <value>
                <fullName>Shop owner</fullName>
            </value>
            <value>
                <fullName>Self Employed</fullName>
            </value>
            <value>
                <fullName>Salaried</fullName>
            </value>
            <value>
                <fullName>Daily wages</fullName>
            </value>
            <value>
                <fullName>Pension</fullName>
            </value>
            <value>
                <fullName>Income from Abroad</fullName>
            </value>
            <value>
                <fullName>Rental Income</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>