force-app/main/default/objects/Application__c/fields/Customer_Sub_Segment__c.field-meta.xml
<CustomField>
    <fullName>Customer_Sub_Segment__c</fullName>
    <label>Customer Sub Segment</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Customer_Segment__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hotels</fullName>
            </value>
            <value>
                <fullName>Restaurant</fullName>
            </value>
            <value>
                <fullName>Tea &amp; snack shops</fullName>
            </value>
            <value>
                <fullName>sweat shops</fullName>
            </value>
            <value>
                <fullName>juice shops</fullName>
            </value>
            <value>
                <fullName>Bakery shop</fullName>
            </value>
            <value>
                <fullName>Catering business</fullName>
            </value>
            <value>
                <fullName>Fast foods</fullName>
            </value>
            <value>
                <fullName>Tiffin center</fullName>
            </value>
            <value>
                <fullName>Ice cream parlour(including sold through road vehicle)</fullName>
            </value>
            <value>
                <fullName>Paan shop</fullName>
            </value>
            <value>
                <fullName>Bars &amp; wine shop</fullName>
            </value>
            <value>
                <fullName>Logistics business</fullName>
            </value>
            <value>
                <fullName>Transport Operator</fullName>
            </value>
            <value>
                <fullName>Travels</fullName>
            </value>
            <value>
                <fullName>Vehicle dealers</fullName>
            </value>
            <value>
                <fullName>Vehicles spare sales or services</fullName>
            </value>
            <value>
                <fullName>Income from vehicles on rent</fullName>
            </value>
            <value>
                <fullName>Owner cum driver</fullName>
            </value>
            <value>
                <fullName>Aluminium / Steel / Glass - Fabrication</fullName>
            </value>
            <value>
                <fullName>Welding unit</fullName>
            </value>
            <value>
                <fullName>Bero / Wardropes / Almirah / racks / Storewell manufacturing</fullName>
            </value>
            <value>
                <fullName>Brick manuacturing</fullName>
            </value>
            <value>
                <fullName>Limestone ash manufacturing</fullName>
            </value>
            <value>
                <fullName>Dying unit (coloring)</fullName>
            </value>
            <value>
                <fullName>Machining unit</fullName>
            </value>
            <value>
                <fullName>Oil refining or mill</fullName>
            </value>
            <value>
                <fullName>Printing unit</fullName>
            </value>
            <value>
                <fullName>Rice Mill</fullName>
            </value>
            <value>
                <fullName>Wheat mill</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>