force-app/main/default/objects/Application__c/fields/Customer_Visit_date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Visit_date__c</fullName>
    <label>Customer Visit Date</label>
    <type>Date</type>
</CustomField>