force-app/main/default/objects/Application__c/fields/Date_of_legal_opinion__c.field-meta.xml
<CustomField>
    <fullName>Date_of_legal_opinion__c</fullName>
    <label>Date Of Legal Opinion</label>
    <type>Date</type>
</CustomField>