force-app/main/default/objects/Application__c/fields/DBR_PC__c.field-meta.xml
<CustomField>
    <fullName>DBR_PC__c</fullName>
    <label>DBR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>