force-app/main/default/objects/Application__c/fields/Disbursal_Author_Decision__c.field-meta.xml
<CustomField>
    <fullName>Disbursal_Author_Decision__c</fullName>
    <label>Disbursal Author Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approve</fullName>
            </value>
            <value>
                <fullName>Reject</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>