force-app/main/default/objects/Application__c/fields/Disbursal_Author_Decision_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Disbursal_Author_Decision_Remarks__c</fullName>
    <label>Disbursal Author Decision Remarks</label>
    <type>TextArea</type>
</CustomField>