force-app/main/default/objects/Application__c/fields/Disbursement_party__c.field-meta.xml
<CustomField>
    <fullName>Disbursement_party__c</fullName>
    <label>Disbursement Party</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Disbursement Party Name</fullName>
            </value>
            <value>
                <fullName>Third Party</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>