force-app/main/default/objects/Application__c/fields/Disbursement_party_Id__c.field-meta.xml
<CustomField>
    <fullName>Disbursement_party_Id__c</fullName>
    <label>Disbursement party Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>