force-app/main/default/objects/Application__c/fields/Disbursement_Party_Name__c.field-meta.xml
<CustomField>
    <fullName>Disbursement_Party_Name__c</fullName>
    <label>Disbursement Party Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>