force-app/main/default/objects/Application__c/fields/Discussion_done_with__c.field-meta.xml
<CustomField>
    <fullName>Discussion_done_with__c</fullName>
    <label>Discussion Done With</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MD</fullName>
            </value>
            <value>
                <fullName>CEO</fullName>
            </value>
            <value>
                <fullName>CCO</fullName>
            </value>
            <value>
                <fullName>Senior Head Credit</fullName>
            </value>
            <value>
                <fullName>TL</fullName>
            </value>
            <value>
                <fullName>Approval Credit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>