force-app/main/default/objects/Application__c/fields/DOS_Decision__c.field-meta.xml
<CustomField>
    <fullName>DOS_Decision__c</fullName>
    <label>DOS Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Hold</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>