force-app/main/default/objects/Application__c/fields/DOS_Decision_Remarks__c.field-meta.xml
<CustomField>
    <fullName>DOS_Decision_Remarks__c</fullName>
    <label>DOS Decision Remarks</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>