force-app/main/default/objects/Application__c/fields/DOS_Report_Finding_Observations__c.field-meta.xml
<CustomField>
    <fullName>DOS_Report_Finding_Observations__c</fullName>
    <label>DOS Report Finding / Observations</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>