force-app/main/default/objects/Application__c/fields/DOS_Required__c.field-meta.xml
<CustomField>
    <fullName>DOS_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DOS Required?</label>
    <type>Checkbox</type>
</CustomField>