force-app/main/default/objects/Application__c/fields/DOS_User__c.field-meta.xml
<CustomField>
    <fullName>DOS_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DOS User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Applications1</relationshipName>
    <type>Lookup</type>
</CustomField>