force-app/main/default/objects/Application__c/fields/Effective_IRR__c.field-meta.xml
<CustomField>
    <fullName>Effective_IRR__c</fullName>
    <label>Effective IRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>