force-app/main/default/objects/Application__c/fields/EMI__c.field-meta.xml
<CustomField>
    <fullName>EMI__c</fullName>
    <label>EMI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>