force-app/main/default/objects/Application__c/fields/EMI_for_Tranche_Amount_2__c.field-meta.xml
<CustomField>
    <fullName>EMI_for_Tranche_Amount_2__c</fullName>
    <formula>ROUND((Tranche_2__c * (Customer_Communicated__c/12) )*
(((1+(Customer_Communicated__c/12))^ Total_Tenor__c )/
(((1+(Customer_Communicated__c/12))^ Total_Tenor__c )-1)),2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EMI For Tranche 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>