force-app/main/default/objects/Application__c/fields/Emi_PcAc__c.field-meta.xml
<CustomField>
    <fullName>Emi_PcAc__c</fullName>
    <formula>ROUND((Total_Amount_Recommended_PcAc__c * (Customer_Communicated__c/12) )*
(((1+(Customer_Communicated__c/12))^ VALUE(TEXT(Tenor_In_Months__c)))/
(((1+(Customer_Communicated__c/12))^ VALUE(TEXT(Tenor_In_Months__c)))-1)),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Emi</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>