force-app/main/default/objects/Application__c/fields/External_Lawyer__c.field-meta.xml
<CustomField>
    <fullName>External_Lawyer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>External Lawyer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>External Lawyer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>