force-app/main/default/objects/Application__c/fields/Field_Officer_Emp_Id__c.field-meta.xml
<CustomField>
    <fullName>Field_Officer_Emp_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Field Officer Employee Id</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Applications4</relationshipName>
    <type>Lookup</type>
</CustomField>