force-app/main/default/objects/Application__c/fields/Field_Officer_Employee_ID__c.field-meta.xml
<CustomField>
    <fullName>Field_Officer_Employee_ID__c</fullName>
    <label>Field Officer Employee ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>