force-app/main/default/objects/Application__c/fields/Field_Officer_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Officer_Name__c</fullName>
    <label>Field Officer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>