force-app/main/default/objects/Application__c/fields/File_Category__c.field-meta.xml
<CustomField>
    <fullName>File_Category__c</fullName>
    <label>File Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Easy</fullName>
            </value>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Big</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>