force-app/main/default/objects/Application__c/fields/Final_Collateral_value_for_Tranche_2__c.field-meta.xml
<CustomField>
    <fullName>Final_Collateral_value_for_Tranche_2__c</fullName>
    <label>Final Collateral Value For Tranche 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>