force-app/main/default/objects/Application__c/fields/Geo_tagging_pin_for_the_user__c.field-meta.xml
<CustomField>
    <fullName>Geo_tagging_pin_for_the_user__c</fullName>
    <label>Geo Tagging Pin For The User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>