force-app/main/default/objects/Application__c/fields/Group_Total_Exposure__c.field-meta.xml
<CustomField>
    <fullName>Group_Total_Exposure__c</fullName>
    <label>Group Total Exposure(₹)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>