force-app/main/default/objects/Application__c/fields/Group_Valuation__c.field-meta.xml
<CustomField>
    <fullName>Group_Valuation__c</fullName>
    <label>Group Valuation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>