force-app/main/default/objects/Application__c/fields/Guarantor_Networth_Choosen__c.field-meta.xml
<CustomField>
    <fullName>Guarantor_Networth_Choosen__c</fullName>
    <label>Guarantor Networth</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>