force-app/main/default/objects/Application__c/fields/Guarantor_Networth_If_application__c.field-meta.xml
<CustomField>
    <fullName>Guarantor_Networth_If_application__c</fullName>
    <label>Guarantor Networth(If Application)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>