force-app/main/default/objects/Application__c/fields/hasVerificationRecords__c.field-meta.xml
<CustomField>
    <fullName>hasVerificationRecords__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HasVerificationRecords</label>
    <type>Checkbox</type>
</CustomField>