force-app/main/default/objects/Application__c/fields/HM__c.field-meta.xml
<CustomField>
    <fullName>HM__c</fullName>
    <label>HM</label>
    <length>20</length>
    <type>Text</type>
</CustomField>