force-app/main/default/objects/Application__c/fields/Insurance_Premium__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Premium__c</fullName>
    <label>Insurance Premium</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>