force-app/main/default/objects/Application__c/fields/Is_Deviation_Approval_User__c.field-meta.xml
<CustomField>
    <fullName>Is_Deviation_Approval_User__c</fullName>
    <formula>Is_Deviation_Raised__c &amp;&amp;  $User.Id ==  Current_Deviation_Approval__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Deviation Approval User</label>
    <type>Checkbox</type>
</CustomField>