force-app/main/default/objects/Application__c/fields/KYC_Risk_Rating__c.field-meta.xml
<CustomField>
    <fullName>KYC_Risk_Rating__c</fullName>
    <label>KYC Risk Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>HIgh</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>