force-app/main/default/objects/Application__c/fields/LC__c.field-meta.xml
<CustomField>
    <fullName>LC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LC</label>
    <type>Checkbox</type>
</CustomField>