force-app/main/default/objects/Application__c/fields/Legal_Decision__c.field-meta.xml
<CustomField>
    <fullName>Legal_Decision__c</fullName>
    <label>Legal Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>