force-app/main/default/objects/Application__c/fields/Legal_Sanction_Condition__c.field-meta.xml
<CustomField>
    <fullName>Legal_Sanction_Condition__c</fullName>
    <label>Legal Sanction Condition</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>