force-app/main/default/objects/Application__c/fields/Lien_Marked__c.field-meta.xml
<CustomField>
    <fullName>Lien_Marked__c</fullName>
    <label>Lien Marked</label>
    <length>40</length>
    <type>Text</type>
</CustomField>