force-app/main/default/objects/Application__c/fields/Living_style__c.field-meta.xml
<CustomField>
    <fullName>Living_style__c</fullName>
    <label>Living Style</label>
    <length>20</length>
    <type>Text</type>
</CustomField>