force-app/main/default/objects/Application__c/fields/LMS_Response_Reference__c.field-meta.xml
<CustomField>
    <fullName>LMS_Response_Reference__c</fullName>
    <label>LMS Response Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>